Closed
Bug 201250
Opened 23 years ago
Closed 23 years ago
Trunk M140A crash [@ FileSystemDataSource::FileSystemDataSource]
Categories
(Core Graveyard :: RDF, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jay, Assigned: timeless)
Details
(Keywords: crash, qawanted, topcrash)
Crash Data
Attachments
(1 file)
|
1.88 KB,
patch
|
dougt
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
This crash seems to have started with 3/21 MozillaTrunk builds and has become a
topcrasher for Mozilla 1.4 Alpha on all flavors of Windows. Looking at the CVS
log, it looks like there were a few checkins in the middle of March...with the
last one happening on 3/21:
1.125 <timeless@mozdev.org> 21 Mar 2003 13:01
Bug 145858 Imported NetPositive Bookmarks are not loaded properly anymore
patch by sergei_d@fi.tartu.ee r=dougt
Not sure if that would have introduced this crash, but just wanted to make a
note of it.
Here is the latest Talkback data for M140A:
Rank StackSignature Count
13 FileSystemDataSource::FileSystemDataSource 19
Source File :
c:/builds/seamonkey/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp line : 303
====================================================================================================
Count Offset Real Signature
[ 8 FileSystemDataSource::FileSystemDataSource fb8c098d -
FileSystemDataSource::FileSystemDataSource ]
[ 2 FileSystemDataSource::FileSystemDataSource ffbaf668 -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource f70a1939 -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource c158dede -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource b71b3b39 -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource 90e5f00d -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource 373c9364 -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource 28e50026 -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource 0460074c -
FileSystemDataSource::FileSystemDataSource ]
Crash date range: 2003-04-01 to 2003-04-05
Min/Max Seconds since last crash: 0 - 121430
Min/Max Runtime: 1 - 121430
Count Platform List
12 Windows NT 5.1 build 2600
3 Windows NT 5.2 build 3663
1 Windows NT 4.0 build 1381
1 Windows 98 4.10 build 67766446
Count Build Id List
17 2003040105
No of Unique Users 11
Stack trace(Frame)
FileSystemDataSource::FileSystemDataSource
[c:/builds/seamonkey/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp line
303]
NS_NewRDFFileSystemDataSource
[c:/builds/seamonkey/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp line
1117]
CreateNewRDFFileSystemDataSource
[c:/builds/seamonkey/mozilla/rdf/build/nsRDFModule.cpp line 96]
nsGenericFactory::CreateInstance
[c:/builds/seamonkey/mozilla/xpcom/glue/nsGenericFactory.cpp line 89]
nsComponentManagerImpl::CreateInstanceByContractID
[c:/builds/seamonkey/mozilla/xpcom/components/nsComponentManager.cpp line 2013]
nsComponentManagerImpl::GetServiceByContractID
[c:/builds/seamonkey/mozilla/xpcom/components/nsComponentManager.cpp line 2422]
nsGetServiceByContractID::operator()
[c:/builds/seamonkey/mozilla/xpcom/glue/nsComponentManagerUtils.cpp line 122]
nsCOMPtr_base::assign_from_helper
[c:/builds/seamonkey/mozilla/xpcom/glue/nsCOMPtr.cpp line 82]
RDFServiceImpl::GetDataSource
[c:/builds/seamonkey/mozilla/rdf/base/src/nsRDFService.cpp line 1515]
RDFServiceImpl::GetDataSource
[c:/builds/seamonkey/mozilla/rdf/base/src/nsRDFService.cpp line 1458]
nsXULTemplateBuilder::LoadDataSources
[c:/builds/seamonkey/mozilla/content/xul/templates/src/nsXULTemplateBuilder.cpp
line 767]
nsXULTemplateBuilder::Init
[c:/builds/seamonkey/mozilla/content/xul/templates/src/nsXULTemplateBuilder.cpp
line 236]
nsXULDocument::CheckTemplateBuilder
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 3759]
nsXULDocument::AddElementToDocumentPost
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 1986]
nsXULDocument::ResumeWalk
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 2991]
nsXULDocument::OnStreamComplete
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 3481]
nsStreamLoader::OnStopRequest
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsStreamLoader.cpp line 144]
nsJARChannel::OnStopRequest
[c:/builds/seamonkey/mozilla/netwerk/protocol/jar/src/nsJARChannel.cpp line 653]
nsCOMPtr_base::assign_with_AddRef
[c:/builds/seamonkey/mozilla/xpcom/glue/nsCOMPtr.cpp line 71]
nsInputStreamPump::OnStateStop
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsInputStreamPump.cpp line 471]
nsInputStreamPump::OnInputStreamReady
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsInputStreamPump.cpp line 325]
nsInputStreamReadyEvent::EventHandler
[c:/builds/seamonkey/mozilla/xpcom/io/nsStreamUtils.cpp line 117]
PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 660]
PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 596]
_md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 1396]
USER32.dll + 0x4455 (0x77d44455)
USER32.dll + 0x95d5 (0x77d495d5)
nsAppShellService::Run
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp line 480]
main1 [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1287]
main [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1645]
WinMain [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1666]
WinMainCRTStartup()
kernel32.dll + 0x214c7 (0x77e814c7)
(18787075) Comments: start up
(18713838) Comments: When a tried to start Mozilla some DLL that returns
zero pointer? I'm running Windows NT.
====================================================================================================
Count Offset Real Signature
[ 1 FileSystemDataSource::FileSystemDataSource a4fe72f4 -
FileSystemDataSource::FileSystemDataSource ]
[ 1 FileSystemDataSource::FileSystemDataSource a3670038 -
FileSystemDataSource::FileSystemDataSource ]
Crash date range: 2003-04-04 to 2003-04-07
Min/Max Seconds since last crash: 14604 - 16827
Min/Max Runtime: 14604 - 16827
Count Platform List
1 Windows NT 5.0 build 2195
1 Windows NT 4.0 build 1381
Count Build Id List
2 2003040105
No of Unique Users 2
Stack trace(Frame)
FileSystemDataSource::FileSystemDataSource
[c:/builds/seamonkey/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp line
303]
NS_NewRDFFileSystemDataSource
[c:/builds/seamonkey/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp line
1117]
CreateNewRDFFileSystemDataSource
[c:/builds/seamonkey/mozilla/rdf/build/nsRDFModule.cpp line 96]
nsGenericFactory::CreateInstance
[c:/builds/seamonkey/mozilla/xpcom/glue/nsGenericFactory.cpp line 89]
nsComponentManagerImpl::CreateInstanceByContractID
[c:/builds/seamonkey/mozilla/xpcom/components/nsComponentManager.cpp line 2013]
nsComponentManagerImpl::GetServiceByContractID
[c:/builds/seamonkey/mozilla/xpcom/components/nsComponentManager.cpp line 2422]
nsGetServiceByContractID::operator()
[c:/builds/seamonkey/mozilla/xpcom/glue/nsComponentManagerUtils.cpp line 122]
nsCOMPtr_base::assign_from_helper
[c:/builds/seamonkey/mozilla/xpcom/glue/nsCOMPtr.cpp line 82]
RDFServiceImpl::GetDataSource
[c:/builds/seamonkey/mozilla/rdf/base/src/nsRDFService.cpp line 1515]
RDFServiceImpl::GetDataSource
[c:/builds/seamonkey/mozilla/rdf/base/src/nsRDFService.cpp line 1458]
nsXULTemplateBuilder::LoadDataSources
[c:/builds/seamonkey/mozilla/content/xul/templates/src/nsXULTemplateBuilder.cpp
line 767]
nsXULTemplateBuilder::Init
[c:/builds/seamonkey/mozilla/content/xul/templates/src/nsXULTemplateBuilder.cpp
line 236]
nsXULDocument::CheckTemplateBuilder
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 3759]
nsXULDocument::AddElementToDocumentPost
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 1986]
nsXULDocument::ResumeWalk
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 2991]
nsXULDocument::CachedChromeStreamListener::OnStopRequest
[c:/builds/seamonkey/mozilla/content/xul/document/src/nsXULDocument.cpp line 4433]
nsDocumentOpenInfo::OnStopRequest
[c:/builds/seamonkey/mozilla/uriloader/base/nsURILoader.cpp line 256]
nsCachedChromeChannel::HandleStopLoadEvent
[c:/builds/seamonkey/mozilla/rdf/chrome/src/nsChromeProtocolHandler.cpp line 473]
PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 660]
_md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 1396]
(18795636) Comments: started browser from mozilla mail by clicking icon at
bottom
Comment 1•23 years ago
|
||
added dougt and alecf on the chance they can help on this one. rjc is no longer
around.
Comment 2•23 years ago
|
||
added dougt and alecf on the chance they can help on this one. rjc is no longer
around.
Comment 3•23 years ago
|
||
talkback says there are only 2 unique users - do we think this is just one
person who keeps setting this off?
my guess is that this is
1.120 dougt%netscape.com Mar Create a new xpcom obsolete library (and
component library).
I'll provide a suggested patch shortly.
295 #ifdef XP_WIN
296 dougt 1.120 nsCOMPtr<nsIFile> file;
297 NS_GetSpecialDirectory(NS_WIN_FAVORITES_DIR,
getter_AddRefs(file));
Favorites dir can fail...
298
299 nsCOMPtr<nsIURI> furi;
300 NS_NewFileURI(getter_AddRefs(furi), file);
301 nsCAutoString favoritesDir;
302 file->GetNativePath(favoritesDir);
so we should crash here.
Assignee: rjc → timeless
Attachment #120468 -
Flags: superreview?(alecf)
Attachment #120468 -
Flags: review?(dougt)
Comment 6•23 years ago
|
||
Comment on attachment 120468 [details] [diff] [review]
this should do it
works for me
sr=alecf
Attachment #120468 -
Flags: superreview?(alecf) → superreview+
Comment 7•23 years ago
|
||
Comment on attachment 120468 [details] [diff] [review]
this should do it
also fix the XP_BEOS case.
Attachment #120468 -
Flags: review?(dougt) → review+
The beos case is different. settings is a required folder and the optional bits are attached using the xpcom api. it's true that we don't verify that the directory exists, but it isn't a big concern. we can file a bug about that later if someone is really concern (i'm actually about to start building on BeOS so i'll play with it later).
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Crash Signature: [@ FileSystemDataSource::FileSystemDataSource]
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•