Bug 201250 Trunk M140A crash [@ FileSystemDataSource::FileSystemDataSource] r=dougt sr=alecf